#1211 | Fixed the opening of pdf page on clicking the invisible print button.

--- a/modules/openlmis-web/src/main/webapp/public/less/content.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/content.less
@@ -468,8 +468,8 @@ span[class^="tpl-"] {
     }
   }
   .print-button {
+    display: none;
     opacity: 0.0;
-    .transition(opacity 1s ease-in-out);
   }
 }
 
